# vss2svn

./: Build.PL  CHANGES.txt  README.md  build.bat  devnotes.txt  give-exe-help.pl  install.pod  readme.pod  vss2svn.pl
contrib/autoconvert/: config.sh  convert.sh  functions.sh  readme.txt  rename.sed
contrib/autoconvert/projects/: projects_destroy  projects_nice  projects_ugly
contrib/autoconvert/projects/dependency/: p004-blabla  p005-ugly  p006-test
contrib/autoconvert/tools/: ActionHandler.diff
contrib/filterorphan/: README.txt  filterorphan.cpp
legacy/: CHANGES.txt  build.bat  install.pod  readme.pod  vss2svn.pl
lib/Vss2Svn/: Subversion.pm  VSS.pm
script/: _README1st.txt  build-vss2svn.perlapp  devnotes.txt  readme.pod  vss2svn.pl
script/Vss2Svn/: ActionHandler.pm  DataCache.pm  Dumpfile.pm  SvnRevHandler.pm
script/Vss2Svn/Dumpfile/: AutoProps.pm  LabelMapper.pm  Node.pm  SanityChecker.pm
script/encodings/: windows-1253.enc
script/encodings/source/: ibm866.xml  windows-1253.xml
ssphys/: Makefile.am  ReadMe.txt  TODO  configure.ac  maintainer-clean.sh  runauto.sh  ssphys.PL  ssphys.dsw  ssphys.sln  version.in
ssphys/SSAPI/: Resource.h  SSAPI.cpp  SSAPI.def  SSAPI.dsp  SSAPI.h  SSAPI.idl  SSAPI.rc  SSAPIps.def  SSAPIps.mk  StdAfx.h  VSSApp.cpp  VSSApp.h  VSSApp.rgs  VSSDatabase.cpp  VSSDatabase.h  VSSDatabase.rgs  VSSItem.cpp  VSSItem.h  VSSItem.rgs  VSSItems.cpp  VSSItems.h  VSSItems.rgs  VSSVersions.cpp  VSSVersions.h  VSSVersions.rgs  dlldata.c
ssphys/SSLib/: IniFile.cpp  IniFile.h  Readme.txt  SSDatabase.cpp  SSDatabase.h  SSItem.cpp  SSItem.h  SSLib.dsp  SSVersion.cpp  SSVersion.h  StdAfx.cpp  StdAfx.h  tokenarray.h
ssphys/SSPhys/: Arguments.cpp  Arguments.h  Command.cpp  Command.h  CommandFactory.cpp  CommandFactory.h  CommandLine.cpp  CommandLine.h  FileTypeCommand.cpp  FileTypeCommand.h  Formatter.cpp  Formatter.h  GetCommand.cpp  GetCommand.h  GlobalOptions.cpp  GlobalOptions.h  HelpCommand.cpp  HelpCommand.h  HistoryCommand.cpp  HistoryCommand.h  InfoCommand.cpp  InfoCommand.h  Makefile.am  Options.cpp  Options.h  PropertiesCommand.cpp  PropertiesCommand.h  SSTests.cpp  SSTests.h  StdAfx.cpp  StdAfx.h  ValidateCommand.cpp  ValidateCommand.h  VersionFilter.cpp  VersionFilter.h  module.mk  ssphys.cpp  ssphys.dsp  ssphys.vcproj
ssphys/SSPhysLib/: FileName.cpp  FileName.h  Makefile.am  Readme.txt  SSBranchFileObject.cpp  SSBranchFileObject.h  SSCheckOutObject.cpp  SSCheckOutObject.h  SSCommentObject.cpp  SSCommentObject.h  SSException.cpp  SSException.h  SSFiles.cpp  SSFiles.h  SSItemInfoObject.cpp  SSItemInfoObject.h  SSName.cpp  SSName.h  SSNameObject.cpp  SSNameObject.h  SSObject.cpp  SSObject.h  SSParentFolderObject.cpp  SSParentFolderObject.h  SSPhysLib.dsp  SSPhysLib.vcproj  SSProjectObject.cpp  SSProjectObject.h  SSRecord.cpp  SSRecord.h  SSTypes.cpp  SSTypes.h  SSVersionObject.cpp  SSVersionObject.h  StdAfx.cpp  StdAfx.h  XML.cpp  XML.h  crc.cpp  crc.h  (+1 more)
ssphys/SSRep/: Formatter.cpp  Formatter.h  Options.cpp  Options.h  StdAfx.cpp  StdAfx.h  VersionFilter.cpp  VersionFilter.h  ssrep.cpp  ssrep.dsp
ssphys/Schemas/: vss.xsd
ssphys/test/: test.BAT  test.pl  test.sh
ssphys/test/lib/: Vss2Svn.pm  VssCmd.pm  VssOle.pm  VssPath.pm
ssphys/test/lib/Vss2Svn/: VSS.pm
ssphys/test/t/: ssrep_1.t
ssphys/utils/: LeakWatcher.h  tinyxml.cpp  tinyxml.h
www/: index.html
