AC_INIT(version.in)
AM_INIT_AUTOMAKE(ssphys,0.18.3)
# we will be using C++
AC_PROG_CXX
# we will build libraries in some subdirectories
AC_PROG_LIBTOOL
# Check for the C++ Boost library with Program Options support
AC_CHECK_LIB(boost_program_options, main,, [
	AC_MSG_ERROR([You need the C++ boost Program Options library (1.32 or later).])])
AC_CHECK_LIB(boost_filesystem, main,, [
	AC_MSG_ERROR([You need the C++ boost filesystem library.])])
# add an install target to Makefile
AC_PROG_INSTALL
AC_OUTPUT(Makefile)
AC_OUTPUT(SSPhysLib/Makefile)
AC_OUTPUT(SSPhys/Makefile)

svnwcrev . version.in version.h
AC_INIT(version.in)
AM_INIT_AUTOMAKE(ssphys,0.18.3)
# we will be using C++
AC_PROG_CXX
# we will build libraries in some subdirectories
AC_PROG_LIBTOOL
# Check for the C++ Boost library with Program Options support
AC_CHECK_LIB(boost_program_options, main,, [
	AC_MSG_ERROR([You need the C++ boost Program Options library (1.32 or later).])])
AC_CHECK_LIB(boost_filesystem, main,, [
	AC_MSG_ERROR([You need the C++ boost filesystem library.])])
# add an install target to Makefile
AC_PROG_INSTALL
AC_OUTPUT(Makefile)
AC_OUTPUT(SSPhysLib/Makefile)
AC_OUTPUT(SSPhys/Makefile)

svnwcrev . version.in version.h
AC_INIT(version.in)
AM_INIT_AUTOMAKE(ssphys,0.18.3)
# we will be using C++
AC_PROG_CXX
# we will build libraries in some subdirectories
AC_PROG_LIBTOOL
# Check for the C++ Boost library with Program Options support
AC_CHECK_LIB(boost_program_options, main,, [
	AC_MSG_ERROR([You need the C++ boost Program Options library (1.32 or later).])])
AC_CHECK_LIB(boost_filesystem, main,, [
	AC_MSG_ERROR([You need the C++ boost filesystem library.])])
# add an install target to Makefile
AC_PROG_INSTALL
AC_OUTPUT(Makefile)
AC_OUTPUT(SSPhysLib/Makefile)
AC_OUTPUT(SSPhys/Makefile)

svnwcrev . version.in version.h
AC_INIT(version.in)
AM_INIT_AUTOMAKE(ssphys,0.18.3)
# we will be using C++
AC_PROG_CXX
# we will build libraries in some subdirectories
AC_PROG_LIBTOOL
# Check for the C++ Boost library with Program Options support
AC_CHECK_LIB(boost_program_options, main,, [
	AC_MSG_ERROR([You need the C++ boost Program Options library (1.32 or later).])])
AC_CHECK_LIB(boost_filesystem, main,, [
	AC_MSG_ERROR([You need the C++ boost filesystem library.])])
# add an install target to Makefile
AC_PROG_INSTALL
AC_OUTPUT(Makefile)
AC_OUTPUT(SSPhysLib/Makefile)
AC_OUTPUT(SSPhys/Makefile)

svnwcrev . version.in version.h
