# non-Gnu-style project
AUTOMAKE_OPTIONS = foreign
noinst_LIBRARIES = libSSPhys.a

libSSPhys_a_SOURCES = \
SSBranchFileObject.cpp \
SSBranchFileObject.h \
SSCheckOutObject.cpp \
SSCheckOutObject.h \
SSCommentObject.cpp \
SSCommentObject.h \
SSException.cpp \
SSException.h \
SSFiles.cpp \
SSFiles.h \
SSItemInfoObject.cpp \
SSItemInfoObject.h \
SSName.cpp \
SSName.h \
SSNameObject.cpp \
SSNameObject.h \
SSObject.cpp \
SSObject.h \
SSParentFolderObject.cpp \
SSParentFolderObject.h \
SSProjectObject.cpp \
SSProjectObject.h \
SSRecord.cpp \
SSRecord.h \
SSTypes.cpp \
SSTypes.h \
SSVersionObject.cpp \
SSVersionObject.h \
StdAfx.cpp \
StdAfx.h \
XML.cpp \
XML.h \
crc.cpp \
crc.h \
../utils/LeakWatcher.h \
../utils/tinystr.cpp \
../utils/tinystr.h \
../utils/tinyxml.cpp \
../utils/tinyxml.h \
../utils/tinyxmlerror.cpp \
../utils/tinyxmlparser.cpp

INCLUDES = -I@top_srcdir@/utils
# strstream is a deprecated header, sstream is the replacement
AM_CXXFLAGS = -Wno-deprecated
